--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">AJKA RIZKI ARES</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>The creative adult is the child who survived after the world tried killing them, making them “grown up.</h2>
+      <h2>The creative adult is the child who survived after the world tried killing them, making them “grown up".</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
