--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
- 
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Personal - v4.8.1
+  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
@@ -36,7 +59,7 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-          <a href="https://twitter.com/ajkares" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="https://twitter.com/litueo" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
           <a href="https://discord.gg/8CM35xR38H" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
           <a href="https://www.instagram.com/ajkares" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="https://www.youtube.com/channel/UCPUw3NN_R5UjbZKYAx20rdA" target="_blank" class="youtube"><i class="bi bi-youtube"></i></a>
@@ -550,7 +573,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://twitter.com/ajkares" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://twitter.com/litueo" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://discord.gg/8CM35xR38H" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
               <a href="https://www.instagram.com/ajkares" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.youtube.com/channel/UCPUw3NN_R5UjbZKYAx20rdA" target="_blank" class="youtube"><i class="bi bi-youtube"></i></a>
