--- a/index.html
+++ b/index.html
@@ -471,6 +471,24 @@
             <p>Part of Academic Acceleration Class</p>
           </div>
         </div>
+         <div class="col-lg-6">
+          <h3 class="resume-title">Work Experience</h3>
+          <div class="resume-item">
+            <h4>BPS - Statistics Indonesia</h4>
+            <h5>oct 2022 - nov 2022</h5>
+            <p><em>Census Enumerator </em></p>
+            <p>
+            <ul>
+              <li>Conducting extensive and thorough visual surveys of areas covered during the census procedure.</li>
+              <li>SCreating survey sheets or working on predefined surveys to gather census information. </li>
+              <li>Visiting citizens at their homes to conduct interviews and collect individual’s demographic and economic status, and submitting data to help build comprehensive records for lawmakers..</li>
+              <li>Analyze the authenticity of the information provided by ensuring direct contact with each family member within a family.</li>
+              <li>Identify and report any issues that may arise while attempting to obtain valid data.</li>
+              <li>Interpret interview questions to assist people in understanding them and providing eloquent answers.</li>
+              <li>Explain the objectives of surveys and their procedures to people who are to be interviewed.</li>
+            </ul>
+            </p>
+          </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Work Experience</h3>
           <div class="resume-item">
