--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
             <p>
             <ul>
               <li>Conducting extensive and thorough visual surveys of areas covered during the census procedure.</li>
-              <li>SCreating survey sheets or working on predefined surveys to gather census information. </li>
-              <li>Visiting citizens at their homes to conduct interviews and collect individual’s demographic and economic status, and submitting data to help build comprehensive records for lawmakers..</li>
+              <li>Creating survey sheets or working on predefined surveys to gather census information.</li>
+              <li>Visiting citizens at their homes to conduct interviews and collect individual’s demographic data and economic status.</li>
               <li>Analyze the authenticity of the information provided by ensuring direct contact with each family member within a family.</li>
               <li>Identify and report any issues that may arise while attempting to obtain valid data.</li>
               <li>Interpret interview questions to assist people in understanding them and providing eloquent answers.</li>
