--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <h4>Bachelor of Management</h4>
             <h5>2018 - Present</h5>
             <p><em>University of Lambung Mangkurat</em></p>
-            <p>-</p>
+            <p>Major in Business Management & Entrepreneurship</p>
           </div>
           <div class="resume-item">
             <h4>Vocational Highschool</h4>
