--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Copywriter, Videographer, &amp; Editor</h3>
+          <h3>Virtual Assistant &amp; Editor</h3>
           <p class="fst-italic">
             “Hi ! I'm Ares”
           </p>
