--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
             </div>
           </div>
           <p>
-            I'm currently finalizing my Bachelor Degree of Management in University of Lambung Mangkurat and prepared to
-            contribute to organizational success while developing new skills and gaining real-world experience. Highly organized and
-            responsible with strong communication, critical & creative thinking skills. Willing to take on any task to help the team.
+           As a highly organized and responsible individual with a bachelor's degree in management from Lambung Mangkurat University, 
+           I possess a robust skill set that includes strong communication, critical thinking, and creativity. I am driven by a willingness 
+           to take on any task to support my team effectively.My passion lies in administration projects and video editing. 
+           In administrative roles, I excel in maintaining order and efficiency, ensuring that tasks are completed promptly and accurately. 
+           Additionally, my proficiency in video editing allows me to bring a creative touch to projects, enhancing their visual appeal and storytelling.
+           Overall, I am dedicated to contributing my expertise and enthusiasm to any project or team I am a part of, striving for excellence in all endeavors.
           </p>
         </div>
       </div>
