--- a/index.html
+++ b/index.html
@@ -102,12 +102,10 @@
             </div>
           </div>
           <p>
-           As a highly organized and responsible individual with a bachelor's degree in management from Lambung Mangkurat University, 
-           I possess a robust skill set that includes strong communication, critical thinking, and creativity. I am driven by a willingness 
-           to take on any task to support my team effectively.My passion lies in administration projects and video editing. 
-           In administrative roles, I excel in maintaining order and efficiency, ensuring that tasks are completed promptly and accurately. 
-           Additionally, my proficiency in video editing allows me to bring a creative touch to projects, enhancing their visual appeal and storytelling.
-           Overall, I am dedicated to contributing my expertise and enthusiasm to any project or team I am a part of, striving for excellence in all endeavors.
+           As a highly organized individual with a Bachelor's degree in Management from Lambung Mangkurat University, 
+           I bring strong communication, critical thinking, and creativity to the table. 
+           Specializing in administration and video editing, I excel in maintaining efficiency and adding a creative flair to projects. 
+           Committed to delivering excellence, I'm eager to contribute my skills and enthusiasm to any team or project.
           </p>
         </div>
       </div>
