--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>-</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ajkaress@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>Management<span>-</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ajkaares@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
