--- a/index.html
+++ b/index.html
@@ -545,7 +545,24 @@
 
     </div>
   </section><!-- End Services Section -->
-
+<div class="col-lg-6">
+          <h3 class="resume-title"></h3>
+          <div class="resume-item">
+            <h4>General Administrative VA</h4>
+            <h5>Virtual Assistant</h5>
+            <p>
+            <ul>
+              <li>Customer Support.</li>
+              <li>Personal Administration.</li>
+              <li>Call Centre & Email Support.</li>
+              <li>Administrative Support.</li>
+              <li>Live chat Support.</li>
+              <li>Tickets Handling.</li>
+              <li>Excel Work.</li>
+            </ul>
+            </p>
+          </div>
+        </div>
   <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container">
