--- a/index.html
+++ b/index.html
@@ -552,13 +552,16 @@
             <h5>Virtual Assistant</h5>
             <p>
             <ul>
-              <li>Customer Support.</li>
-              <li>Personal Administration.</li>
-              <li>Call Centre & Email Support.</li>
-              <li>Administrative Support.</li>
-              <li>Live chat Support.</li>
-              <li>Tickets Handling.</li>
-              <li>Excel Work.</li>
+              <li>Email management: Sorting, responding to, and organizing emails.</li>
+              <li>Calendar management: Scheduling appointments, meetings, and events.</li>
+              <li>Data entry: Entering, updating, and maintaining databases or spreadsheets.</li>
+              <li>Travel arrangements: Booking flights, accommodations, and transportation.</li>
+              <li>File organization: Creating, organizing, and managing digital files and documents.</li>
+              <li>Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li>
+              <li>Research: Conducting online research for various topics or projects..</li>
+              <li>Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.</li>
+              <li>Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li>
+              <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
             </ul>
             </p>
           </div>
