--- a/index.html
+++ b/index.html
@@ -538,10 +538,14 @@
 
       <div class="section-title">
         <h2>Services</h2>
+        <p>My Services</p>
+      </div>
+ <div class="row">
        <div class="col-lg-6">
-          <h3 class="resume-title"></h3>
-          <div class="resume-item">
-            <h4>General Administrative VA</h4>
+         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="">General Administrative </a></h4>
             <h5>Virtual Assistant</h5>
             <p>
             <ul>
@@ -557,6 +561,7 @@
               <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
             </ul>
             </p>
+          </div>
           </div>
         </div>
       </div>
