--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       </div>
  <div class="row">
      <div class="col-lg-10">
-  <div class="col-lg-10 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+  <div class="col-lg-10 col-md-6 d-flex align-items-stretch">
     <div class="icon-box">
       <div class="icon"><i class="bx bx-file"></i></div>
       <h4><a href="">General Administrative </a></h4>
