--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         <p>My Services</p>
       </div>
  <div class="row">
-  <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
+    <div class="col-lg-6">
     <div class="icon-box">
       <div class="icon"><i class="bx bx-file"></i></div>
       <h4><a href="">General Administrative </a></h4>
