--- a/index.html
+++ b/index.html
@@ -540,28 +540,26 @@
         <h2>Services</h2>
         <p>My Services</p>
       </div>
- <div class="row">
-<div class="col-lg-7 col-md-6 d-flex align-items-stretch">
+<div class="row">
+  <div class="col-lg-10 col-md-4 d-flex align-items-stretch">
     <div class="icon-box">
       <div class="icon"><i class="bx bx-file"></i></div>
       <h4><a href="">General Administrative </a></h4>
       <h5>Virtual Assistant</h5>
-        <ul>
-          <li>Email management: Sorting, responding to, and organizing emails.</li>
-          <li>Calendar management: Scheduling appointments, meetings, and events.</li>
-          <li>Data entry: Entering, updating, and maintaining databases or spreadsheets.</li>
-          <li>Travel arrangements: Booking flights, accommodations, and transportation.</li>
-          <li>File organization: Creating, organizing, and managing digital files and documents.</li>
-          <li>Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li>
-          <li>Research: Conducting online research for various topics or projects.</li>
-          <li>Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.</li>
-          <li>Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li>
-          <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
-        </ul>
+      <p style="text-align: left;">
+        Email management: Sorting, responding to, and organizing emails.<br>
+        Calendar management: Scheduling appointments, meetings, and events.<br>
+        Data entry: Entering, updating, and maintaining databases or spreadsheets.<br>
+        Travel arrangements: Booking flights, accommodations, and transportation.<br>
+        File organization: Creating, organizing, and managing digital files and documents.<br>
+        Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.<br>
+        Research: Conducting online research for various topics or projects.<br>
+        Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.<br>
+        Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.<br>
+        Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.<br>
       </p>
     </div>
   </div>
-</div>
 </div>
 
     </div>
