--- a/index.html
+++ b/index.html
@@ -547,16 +547,18 @@
       <h4><a href="">General Administrative </a></h4>
       <h5>Virtual Assistant</h5>
       <p style="text-align: left;">
-        Email management: Sorting, responding to, and organizing emails.<br>
-        Calendar management: Scheduling appointments, meetings, and events.<br>
-        Data entry: Entering, updating, and maintaining databases or spreadsheets.<br>
-        Travel arrangements: Booking flights, accommodations, and transportation.<br>
-        File organization: Creating, organizing, and managing digital files and documents.<br>
-        Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.<br>
-        Research: Conducting online research for various topics or projects.<br>
-        Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.<br>
-        Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.<br>
-        Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.<br>
+       <p>
+   Email management: Sorting, responding to, and organizing emails.<br>
+   Calendar management: Scheduling appointments, meetings, and events.<br>
+   Data entry: Entering, updating, and maintaining databases or spreadsheets.<br>
+   Travel arrangements: Booking flights, accommodations, and transportation.<br>
+   File organization: Creating, organizing, and managing digital files and documents.<br>
+   Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.<br>
+   Research: Conducting online research for various topics or projects.<br>
+   Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.<br>
+   Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.<br>
+   Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.
+</p>
       </p>
     </div>
   </div>
