--- a/index.html
+++ b/index.html
@@ -547,18 +547,18 @@
       <h4><a href="">General Administrative </a></h4>
       <h5>Virtual Assistant</h5>
       <p style="text-align: left;">
-       <p>
-   Email management: Sorting, responding to, and organizing emails.<br>
-   Calendar management: Scheduling appointments, meetings, and events.<br>
-   Data entry: Entering, updating, and maintaining databases or spreadsheets.<br>
-   Travel arrangements: Booking flights, accommodations, and transportation.<br>
-   File organization: Creating, organizing, and managing digital files and documents.<br>
-   Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.<br>
-   Research: Conducting online research for various topics or projects.<br>
-   Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.<br>
-   Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.<br>
-   Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.
-</p>
+       <ul>
+   <li>Email management: Sorting, responding to, and organizing emails.</li><br>
+   <li>Calendar management: Scheduling appointments, meetings, and events.</li><br>
+   <li>Data entry: Entering, updating, and maintaining databases or spreadsheets.</li><br>
+   <li>Travel arrangements: Booking flights, accommodations, and transportation.</li><br>
+   <li>File organization: Creating, organizing, and managing digital files and documents.</li><br>
+   <li>Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li><br>
+   <li>Research: Conducting online research for various topics or projects.</li><br>
+   <li>Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.</li>
+   <li>Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li><br>
+   <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li><br>
+</ul>
       </p>
     </div>
   </div>
