--- a/index.html
+++ b/index.html
@@ -546,18 +546,17 @@
       <div class="icon"><i class="bx bx-file"></i></div>
       <h4><a href="">General Administrative </a></h4>
       <h5>Virtual Assistant</h5>
-      <p style="text-align: left;">
-       <ul>
-   <li>Email management: Sorting, responding to, and organizing emails.</li><br>
-   <li>Calendar management: Scheduling appointments, meetings, and events.</li><br>
-   <li>Data entry: Entering, updating, and maintaining databases or spreadsheets.</li><br>
-   <li>Travel arrangements: Booking flights, accommodations, and transportation.</li><br>
-   <li>File organization: Creating, organizing, and managing digital files and documents.</li><br>
-   <li>Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li><br>
-   <li>Research: Conducting online research for various topics or projects.</li><br>
+  <ul style="text-align: left;">
+   <li>Email management: Sorting, responding to, and organizing emails.</li>
+   <li>Calendar management: Scheduling appointments, meetings, and events.</li>
+   <li>Data entry: Entering, updating, and maintaining databases or spreadsheets.</li>
+   <li>Travel arrangements: Booking flights, accommodations, and transportation.</li>
+   <li>File organization: Creating, organizing, and managing digital files and documents.</li>
+   <li>Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li>
+   <li>Research: Conducting online research for various topics or projects.</li>
    <li>Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.</li>
-   <li>Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li><br>
-   <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li><br>
+   <li>Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li>
+   <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
 </ul>
       </p>
     </div>
