--- a/index.html
+++ b/index.html
@@ -547,16 +547,16 @@
       <h4><a href="">General Administrative </a></h4>
       <h5>Virtual Assistant</h5>
   <ul style="text-align: left;">
-   <li>Email management: Sorting, responding to, and organizing emails.</li>
-   <li>Calendar management: Scheduling appointments, meetings, and events.</li>
-   <li>Data entry: Entering, updating, and maintaining databases or spreadsheets.</li>
-   <li>Travel arrangements: Booking flights, accommodations, and transportation.</li>
-   <li>File organization: Creating, organizing, and managing digital files and documents.</li>
-   <li>Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li>
-   <li>Research: Conducting online research for various topics or projects.</li>
-   <li>Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.</li>
-   <li>Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li>
-   <li>Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
+   <li style="padding-bottom: 5px;">Email management: Sorting, responding to, and organizing emails.</li>
+   <li style="padding-bottom: 5px;">Calendar management: Scheduling appointments, meetings, and events.</li>
+   <li style="padding-bottom: 5px;">Data entry: Entering, updating, and maintaining databases or spreadsheets.</li>
+   <li style="padding-bottom: 5px;">Travel arrangements: Booking flights, accommodations, and transportation.</li>
+   <li style="padding-bottom: 5px;">File organization: Creating, organizing, and managing digital files and documents.</li>
+   <li style="padding-bottom: 5px;">Customer support: Responding to inquiries, resolving issues, and providing assistance to clients or customers.</li>
+   <li style="padding-bottom: 5px;">Research: Conducting online research for various topics or projects.</li>
+   <li style="padding-bottom: 5px;">Virtual meeting coordination: Setting up and managing virtual meetings, including sending invitations and troubleshooting technical issues.</li>
+   <li style="padding-bottom: 5px;">Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li>
+   <li style="padding-bottom: 5px;">Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
 </ul>
       </p>
     </div>
