--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">AJKARES</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>They call me a jack of all trades. </h2>
+      <h2>They call me a <span>jack of all trades.</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -541,7 +541,7 @@
         <p>My Services</p>
       </div>
 <div class="row">
-  <div class="col-lg-5 col-md-5 d-flex align-items-stretch">
+  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
     <div class="icon-box">
       <div class="icon"><i class="bx bx-file"></i></div>
       <h4><a href="">General Administrative </a></h4>
@@ -558,9 +558,26 @@
    <li style="padding-bottom: 8px;">Social media management: Creating and scheduling posts, engaging with followers, and monitoring analytics.</li>
    <li style="padding-bottom: 8px;">Basic bookkeeping: Managing expenses, invoicing, and basic financial record-keeping.</li>
 </ul>
-      </p>
     </div>
   </div>
+<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+  <div class="icon-box">
+    <div class="icon"><i class="bx bx-slideshow"></i></div>
+    <h4><a href="">Creative VA</a></h4>
+    <h5>Virtual Assistant</h5>
+    <ul style="text-align: left;">
+      <li style="padding-bottom: 8px;">Content Creation: Creating engaging blog posts, social media content, or newsletters for clients. This involves brainstorming topics, conducting research, writing content, and incorporating visual elements.</li>
+      <li style="padding-bottom: 8px;">Graphic Design: Designing eye-catching graphics for social media posts, blog banners, or promotional materials using tools like Canva or Adobe Creative Suite.</li>
+      <li style="padding-bottom: 8px;">Video Editing: Editing and enhancing client videos by adding transitions, overlays, music, and captions to create professional-looking videos for marketing campaigns or presentations.</li>
+      <li style="padding-bottom: 8px;">Virtual Event Management: Assisting clients in planning and organizing virtual events such as webinars, workshops, or online conferences.</li>
+      <li style="padding-bottom: 8px;">Creative Research: Conducting creative research on industry trends, competitor analysis, or audience demographics to provide valuable insights for client projects.</li>
+      <li style="padding-bottom: 8px;">Branding Support: Contributing to the development and maintenance of client brands by creating branding guidelines, designing logos or visual assets, and ensuring brand consistency.</li>
+      <li style="padding-bottom: 8px;">Content Curation: Curating relevant and engaging content from various sources to share with clients' audiences.</li>
+      <li style="padding-bottom: 8px;">Innovative Problem-Solving: Approaching challenges with creativity and innovation to find unique solutions for clients.</li>
+    </ul>
+  </div>
+</div>
+
 </div>
 
     </div>
