--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         <p>My Services</p>
       </div>
 <div class="row">
-  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+  <div class="col-lg-8 col-md-7 d-flex align-items-stretch">
     <div class="icon-box">
       <div class="icon"><i class="bx bx-file"></i></div>
       <h4><a href="">General Administrative </a></h4>
@@ -560,10 +560,10 @@
 </ul>
     </div>
   </div>
-<div class="col-lg-6 col-md-6 d-flex align-items-stretch">
+<div class="col-lg-8 col-md-7 d-flex align-items-stretch">
   <div class="icon-box">
     <div class="icon"><i class="bx bx-slideshow"></i></div>
-    <h4><a href="">Creative VA</a></h4>
+    <h4><a href="">Creative Support</a></h4>
     <h5>Virtual Assistant</h5>
     <ul style="text-align: left;">
       <li style="padding-bottom: 8px;">Content Creation: Creating engaging blog posts, social media content, or newsletters for clients. This involves brainstorming topics, conducting research, writing content, and incorporating visual elements.</li>
