--- a/index.html
+++ b/index.html
@@ -566,14 +566,14 @@
     <h4><a href="">Creative Support</a></h4>
     <h5>Virtual Assistant</h5>
     <ul style="text-align: left;">
-      <li style="padding-bottom: 8px;">Content Creation: Creating engaging blog posts, social media content, or newsletters for clients. This involves brainstorming topics, conducting research, writing content, and incorporating visual elements.</li>
+      <li style="padding-bottom: 8px;">Content Creation: Creating engaging blog posts, social media content, or newsletters for clients.</li>
       <li style="padding-bottom: 8px;">Graphic Design: Designing eye-catching graphics for social media posts, blog banners, or promotional materials using tools like Canva or Adobe Creative Suite.</li>
       <li style="padding-bottom: 8px;">Video Editing: Editing and enhancing client videos by adding transitions, overlays, music, and captions to create professional-looking videos for marketing campaigns or presentations.</li>
       <li style="padding-bottom: 8px;">Virtual Event Management: Assisting clients in planning and organizing virtual events such as webinars, workshops, or online conferences.</li>
       <li style="padding-bottom: 8px;">Creative Research: Conducting creative research on industry trends, competitor analysis, or audience demographics to provide valuable insights for client projects.</li>
       <li style="padding-bottom: 8px;">Branding Support: Contributing to the development and maintenance of client brands by creating branding guidelines, designing logos or visual assets, and ensuring brand consistency.</li>
       <li style="padding-bottom: 8px;">Content Curation: Curating relevant and engaging content from various sources to share with clients' audiences.</li>
-      <li style="padding-bottom: 8px;">Innovative Problem-Solving: Approaching challenges with creativity and innovation to find unique solutions for clients.</li>
+      <li style="padding-bottom: 8px;">Innovative Problem-Solving: Approaching challenges with creativity and innovation to find unique solutions.</li>
     </ul>
   </div>
 </div>
