--- a/index.html
+++ b/index.html
@@ -484,12 +484,13 @@
             </ul>
             </p>
           </div>
+        <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Work Experience</h3>
+          <h3 class="resume-title">Intern Experience</h3>
           <div class="resume-item">
             <h4>Balai Diklat Koperasi dan UKM Prov.Kal-Sel</h4>
             <h5>jul 2021 - sep 2021</h5>
-            <p><em>Internship Student </em></p>
+            <p><em>Staff Administration </em></p>
             <p>
             <ul>
               <li>Reported back to instructor to receive day-to-day tasks and responsibilities.</li>
@@ -503,7 +504,7 @@
           <div class="resume-item">
             <h4>National Sports Committee of Indonesia (KONI) Prov. Kal-Sel</h4>
             <h5>oct 2017 - dec 2017</h5>
-            <p><em>Internship Student</em></p>
+            <p><em>Staff Administration</em></p>
             <p>
             <ul>
               <li>Answered and transferred incoming telephone calls, taking messages for various staff members.</li>
@@ -516,7 +517,7 @@
           <div class="resume-item">
             <h4>Unit Pelayanan Pendapatan Daerah Banjarmasin (UPPD) I</h4>
             <h5>apr 2017 - jul 2017</h5>
-            <p><em>Internship Student</em></p>
+            <p><em>Staff Administration</em></p>
             <p>
             <ul>
               <li>Sorted, organized and maintained files</li>
