--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </p>
           </div>
         <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
           <h3 class="resume-title">Intern Experience</h3>
           <div class="resume-item">
             <h4>Balai Diklat Koperasi dan UKM Prov.Kal-Sel</h4>
