--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>ajkaress@gmail.com</p>
+            <p>ajkaares@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
