--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-          <a href="https://twitter.com/ajkares" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="https://twitter.com/ajreo" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
           <a href="https://discord.gg/8CM35xR38H" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
-          <a href="https://www.instagram.com/ajkares" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.instagram.com/ajreos" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="https://www.youtube.com/channel/UCPUw3NN_R5UjbZKYAx20rdA" target="_blank" class="youtube"><i class="bi bi-youtube"></i></a>
           <a href="#" class="pinterest"><i class="bi bi-pinterest"></i></a>
       </div>
@@ -623,9 +623,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://twitter.com/ajkares" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://twitter.com/ajreo" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://discord.gg/8CM35xR38H" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
-              <a href="https://www.instagram.com/ajkares" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/ajreos" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.youtube.com/channel/UCPUw3NN_R5UjbZKYAx20rdA" target="_blank" class="youtube"><i class="bi bi-youtube"></i></a>
               <a href="#" class="pinterest"><i class="bi bi-pinterest"></i></a>
             </div>
