--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 April 2003</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 April</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Instragram:</strong> <span>ajkares</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 857 5149 3701</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Banjarbaru, Indonesia</span></li>
