--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                What does Ares, Albert Einstein, Steve Jobs and Elon Musk have in common? They're all men. That's it. 
+                What does Albert Einstein, Steve Jobs, Ares and Elon Musk have in common? They're all men. That's it. 
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
