--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="h#" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="discord"><i class="bi bi-discord"></i></a>
               <a href="https://www.instagram.com/ajreos" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.youtube.com/channel/UCPUw3NN_R5UjbZKYAx20rdA" target="_blank" class="youtube"><i class="bi bi-youtube"></i></a>
